force-app/main/default/objects/Registry__c/Registry__c.object-meta.xml
<CustomObject>
    <label>Registry</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Registry System Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>