force-app/main/default/objects/Registry__c/fields/Account_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_Opt_Out__c</fullName>
    <formula>Account__r.PersonHasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>