force-app/main/default/objects/Registry__c/fields/Inactive_Flag__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive Flag</label>
    <type>Checkbox</type>
</CustomField>