force-app/main/default/objects/Registry__c/fields/Registry_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Registry_Create_Date__c</fullName>
    <label>Registry Create Date</label>
    <type>Date</type>
</CustomField>