force-app/main/default/objects/Registry__c/fields/Registry_Created__c.field-meta.xml
<CustomField>
    <fullName>Registry_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registry Created</label>
    <type>Checkbox</type>
</CustomField>