force-app/main/default/objects/Registry__c/fields/Registry_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Registry_Event_Date__c</fullName>
    <label>Registry Event Date</label>
    <type>Date</type>
</CustomField>