force-app/main/default/objects/Registry__c/fields/Registry_Number__c.field-meta.xml
<CustomField>
    <fullName>Registry_Number__c</fullName>
    <description>The registry number from the Toys R Us system.  This differs from the Registry System Number, which is the Service Cloud auto-number.</description>
    <externalId>true</externalId>
    <label>Registry Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>