force-app/main/default/objects/Registry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>if(
Store__c =&apos;3580&apos;
||
isblank(Store__c),
&apos;Online&apos;,
&apos;In Store&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>